--- a/main.css
+++ b/main.css
@@ -173,6 +173,7 @@ p {
 @media (min-width: 45em) {
   .member {
     text-align: left;
+    padding-left: 1em;
     margin-bottom: 3em;
   }
   .member_image {
